app/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from Parser.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parse -> mode_decl                          (0)
	mode_decl -> mode id '{' state_decl main_decl '}'   (1)
	state_decl -> state '{' state_vars '}'             (2)
	state_vars ->                                      (3)
	state_vars -> state_var state_vars                 (4)
	state_var -> id ':' type_reg '=' expr              (5)
	main_decl -> main expr                             (6)
	expr -> int                                        (7)
	expr -> '{' vars exprs '}'                         (8)
	expr -> if pred then expr else expr                (9)
	expr -> for id '=' expr to expr do expr            (10)
	expr -> lval '<-' expr                             (11)
	expr -> idc args ')'                               (12)
	expr -> id '.' idc args ')'                        (13)
	expr -> match expr with '{' cases '}'              (14)
	expr -> trans '[' int ',' int ']' '(' expr ')'     (15)
	expr -> ext '[' int ']' '(' expr ')'               (16)
	expr -> sext '[' int ']' '(' expr ')'              (17)
	expr -> shrink '[' int ']' '(' expr ')'            (18)
	expr -> expr '+' expr                              (19)
	expr -> expr '-' expr                              (20)
	expr -> expr '&' expr                              (21)
	expr -> expr '^' expr                              (22)
	expr -> expr '|' expr                              (23)
	expr -> id                                         (24)
	expr -> '(' expr ')'                               (25)
	expr -> void                                       (26)
	lval -> id                                         (27)
	lval -> id '[' expr ']'                            (28)
	exprs ->                                           (29)
	exprs -> expr exprs                                (30)
	vars ->                                            (31)
	vars -> var_decl vars                              (32)
	var_decl -> var id ':' type_reg '=' expr           (33)
	args ->                                            (34)
	args -> expr                                       (35)
	args -> expr ',' args                              (36)
	cases ->                                           (37)
	cases -> case cases                                (38)
	case -> pat '->' expr                              (39)
	pat -> '_'                                         (40)
	pat -> int                                         (41)
	pat -> id                                          (42)
	pat -> id '(' pats ')'                             (43)
	pats ->                                            (44)
	pats -> pat ',' pats                               (45)
	pred -> true                                       (46)
	pred -> false                                      (47)
	pred -> not pred                                   (48)
	pred -> pred and pred                              (49)
	pred -> pred or pred                               (50)
	pred -> expr comp expr                             (51)
	comp -> '='                                        (52)
	comp -> '/='                                       (53)
	comp -> '<'                                        (54)
	comp -> '>'                                        (55)
	comp -> '<='                                       (56)
	comp -> '>='                                       (57)
	comp -> '<$'                                       (58)
	comp -> '>$'                                       (59)
	comp -> '<=$'                                      (60)
	comp -> '>=$'                                      (61)
	type_reg -> bits '[' int ']'                       (62)
	type_reg -> range '[' int ',' int ']'              (63)
	type_reg -> data id                                (64)
	type_reg -> void                                   (65)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	mode           { TokenMode }
	state          { TokenState }
	main           { TokenMain }
	int            { TokenInt $$ }
	id             { TokenId $$ }
	idc            { TokenIdC $$ }
	var            { TokenVar }
	bits           { TokenBits }
	range          { TokenRange }
	data           { TokenData }
	void           { TokenVoid }
	if             { TokenIf }
	then           { TokenThen }
	else           { TokenElse }
	for            { TokenFor }
	to             { TokenTo }
	do             { TokenDo }
	match          { TokenMatch }
	with           { TokenWith }
	true           { TokenTrue }
	false          { TokenFalse }
	not            { TokenNot }
	and            { TokenAnd }
	or             { TokenOr }
	trans          { TokenTransmute }
	shrink         { TokenShrink }
	ext            { TokenExtend }
	sext           { TokenSignExtend }
	'+'            { TokenPlus }
	'-'            { TokenMinus }
	'&'            { TokenAmphersand }
	'|'            { TokenPipe }
	'^'            { TokenCaret }
	'='            { TokenEq }
	'/='           { TokenNeq }
	'('            { TokenLParen }
	')'            { TokenRParen }
	'{'            { TokenLBrace }
	'}'            { TokenRBrace }
	'['            { TokenLBracket }
	']'            { TokenRBracket }
	':'            { TokenColon }
	','            { TokenComma }
	'.'            { TokenDot }
	'_'            { TokenUnderscore }
	'->'           { TokenRArrow }
	'<-'           { TokenLArrow }
	'<'            { TokenLe }
	'>'            { TokenGe }
	'<='           { TokenLeq }
	'>='           { TokenGeq }
	'<$'           { TokenLeS }
	'<=$'          { TokenLeqS }
	'>$'           { TokenGeS }
	'>=$'          { TokenGeqS }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parse    rule  0
	mode_decl       rule  1
	state_decl      rule  2
	state_vars      rules 3, 4
	state_var       rule  5
	main_decl       rule  6
	expr            rules 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26
	lval            rules 27, 28
	exprs           rules 29, 30
	vars            rules 31, 32
	var_decl        rule  33
	args            rules 34, 35, 36
	cases           rules 37, 38
	case            rule  39
	pat             rules 40, 41, 42, 43
	pats            rules 44, 45
	pred            rules 46, 47, 48, 49, 50, 51
	comp            rules 52, 53, 54, 55, 56, 57, 58, 59, 60, 61
	type_reg        rules 62, 63, 64, 65

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parse -> . mode_decl                         (rule 0)

	mode           shift, and enter state 2

	mode_decl      goto state 3

State 1

	mode_decl -> . mode id '{' state_decl main_decl '}'    (rule 1)

	mode           shift, and enter state 2


State 2

	mode_decl -> mode . id '{' state_decl main_decl '}'    (rule 1)

	id             shift, and enter state 4


State 3

	%start_parse -> mode_decl .                         (rule 0)

	%eof           accept


State 4

	mode_decl -> mode id . '{' state_decl main_decl '}'    (rule 1)

	'{'            shift, and enter state 5


State 5

	mode_decl -> mode id '{' . state_decl main_decl '}'    (rule 1)

	state          shift, and enter state 7

	state_decl     goto state 6

State 6

	mode_decl -> mode id '{' state_decl . main_decl '}'    (rule 1)

	main           shift, and enter state 10

	main_decl      goto state 9

State 7

	state_decl -> state . '{' state_vars '}'            (rule 2)

	'{'            shift, and enter state 8


State 8

	state_decl -> state '{' . state_vars '}'            (rule 2)

	id             shift, and enter state 29
	'}'            reduce using rule 3

	state_vars     goto state 27
	state_var      goto state 28

State 9

	mode_decl -> mode id '{' state_decl main_decl . '}'    (rule 1)

	'}'            shift, and enter state 26


State 10

	main_decl -> main . expr                            (rule 6)

	int            shift, and enter state 13
	id             shift, and enter state 14
	idc            shift, and enter state 15
	void           shift, and enter state 16
	if             shift, and enter state 17
	for            shift, and enter state 18
	match          shift, and enter state 19
	trans          shift, and enter state 20
	shrink         shift, and enter state 21
	ext            shift, and enter state 22
	sext           shift, and enter state 23
	'('            shift, and enter state 24
	'{'            shift, and enter state 25

	expr           goto state 11
	lval           goto state 12

State 11

	main_decl -> main expr .                            (rule 6)
	expr -> expr . '+' expr                             (rule 19)
	expr -> expr . '-' expr                             (rule 20)
	expr -> expr . '&' expr                             (rule 21)
	expr -> expr . '^' expr                             (rule 22)
	expr -> expr . '|' expr                             (rule 23)

	'+'            shift, and enter state 53
	'-'            shift, and enter state 54
	'&'            shift, and enter state 55
	'|'            shift, and enter state 56
	'^'            shift, and enter state 57
	'}'            reduce using rule 6


State 12

	expr -> lval . '<-' expr                            (rule 11)

	'<-'           shift, and enter state 52


State 13

	expr -> int .                                       (rule 7)

	int            reduce using rule 7
	id             reduce using rule 7
	idc            reduce using rule 7
	var            reduce using rule 7
	void           reduce using rule 7
	if             reduce using rule 7
	then           reduce using rule 7
	else           reduce using rule 7
	for            reduce using rule 7
	to             reduce using rule 7
	do             reduce using rule 7
	match          reduce using rule 7
	with           reduce using rule 7
	and            reduce using rule 7
	or             reduce using rule 7
	trans          reduce using rule 7
	shrink         reduce using rule 7
	ext            reduce using rule 7
	sext           reduce using rule 7
	'+'            reduce using rule 7
	'-'            reduce using rule 7
	'&'            reduce using rule 7
	'|'            reduce using rule 7
	'^'            reduce using rule 7
	'='            reduce using rule 7
	'/='           reduce using rule 7
	'('            reduce using rule 7
	')'            reduce using rule 7
	'{'            reduce using rule 7
	'}'            reduce using rule 7
	']'            reduce using rule 7
	','            reduce using rule 7
	'_'            reduce using rule 7
	'<'            reduce using rule 7
	'>'            reduce using rule 7
	'<='           reduce using rule 7
	'>='           reduce using rule 7
	'<$'           reduce using rule 7
	'<=$'          reduce using rule 7
	'>$'           reduce using rule 7
	'>=$'          reduce using rule 7


State 14

	expr -> id . '.' idc args ')'                       (rule 13)
	expr -> id .                                        (rule 24)
	lval -> id .                                        (rule 27)
	lval -> id . '[' expr ']'                           (rule 28)

	int            reduce using rule 24
	id             reduce using rule 24
	idc            reduce using rule 24
	var            reduce using rule 24
	void           reduce using rule 24
	if             reduce using rule 24
	then           reduce using rule 24
	else           reduce using rule 24
	for            reduce using rule 24
	to             reduce using rule 24
	do             reduce using rule 24
	match          reduce using rule 24
	with           reduce using rule 24
	and            reduce using rule 24
	or             reduce using rule 24
	trans          reduce using rule 24
	shrink         reduce using rule 24
	ext            reduce using rule 24
	sext           reduce using rule 24
	'+'            reduce using rule 24
	'-'            reduce using rule 24
	'&'            reduce using rule 24
	'|'            reduce using rule 24
	'^'            reduce using rule 24
	'='            reduce using rule 24
	'/='           reduce using rule 24
	'('            reduce using rule 24
	')'            reduce using rule 24
	'{'            reduce using rule 24
	'}'            reduce using rule 24
	'['            shift, and enter state 50
	']'            reduce using rule 24
	','            reduce using rule 24
	'.'            shift, and enter state 51
	'_'            reduce using rule 24
	'<-'           reduce using rule 27
	'<'            reduce using rule 24
	'>'            reduce using rule 24
	'<='           reduce using rule 24
	'>='           reduce using rule 24
	'<$'           reduce using rule 24
	'<=$'          reduce using rule 24
	'>$'           reduce using rule 24
	'>=$'          reduce using rule 24


State 15

	expr -> idc . args ')'                              (rule 12)

	int            shift, and enter state 13
	id             shift, and enter state 14
	idc            shift, and enter state 15
	void           shift, and enter state 16
	if             shift, and enter state 17
	for            shift, and enter state 18
	match          shift, and enter state 19
	trans          shift, and enter state 20
	shrink         shift, and enter state 21
	ext            shift, and enter state 22
	sext           shift, and enter state 23
	'('            shift, and enter state 24
	')'            reduce using rule 34
	'{'            shift, and enter state 25

	expr           goto state 48
	lval           goto state 12
	args           goto state 49

State 16

	expr -> void .                                      (rule 26)

	int            reduce using rule 26
	id             reduce using rule 26
	idc            reduce using rule 26
	var            reduce using rule 26
	void           reduce using rule 26
	if             reduce using rule 26
	then           reduce using rule 26
	else           reduce using rule 26
	for            reduce using rule 26
	to             reduce using rule 26
	do             reduce using rule 26
	match          reduce using rule 26
	with           reduce using rule 26
	and            reduce using rule 26
	or             reduce using rule 26
	trans          reduce using rule 26
	shrink         reduce using rule 26
	ext            reduce using rule 26
	sext           reduce using rule 26
	'+'            reduce using rule 26
	'-'            reduce using rule 26
	'&'            reduce using rule 26
	'|'            reduce using rule 26
	'^'            reduce using rule 26
	'='            reduce using rule 26
	'/='           reduce using rule 26
	'('            reduce using rule 26
	')'            reduce using rule 26
	'{'            reduce using rule 26
	'}'            reduce using rule 26
	']'            reduce using rule 26
	','            reduce using rule 26
	'_'            reduce using rule 26
	'<'            reduce using rule 26
	'>'            reduce using rule 26
	'<='           reduce using rule 26
	'>='           reduce using rule 26
	'<$'           reduce using rule 26
	'<=$'          reduce using rule 26
	'>$'           reduce using rule 26
	'>=$'          reduce using rule 26


State 17

	expr -> if . pred then expr else expr               (rule 9)

	int            shift, and enter state 13
	id             shift, and enter state 14
	idc            shift, and enter state 15
	void           shift, and enter state 16
	if             shift, and enter state 17
	for            shift, and enter state 18
	match          shift, and enter state 19
	true           shift, and enter state 45
	false          shift, and enter state 46
	not            shift, and enter state 47
	trans          shift, and enter state 20
	shrink         shift, and enter state 21
	ext            shift, and enter state 22
	sext           shift, and enter state 23
	'('            shift, and enter state 24
	'{'            shift, and enter state 25

	expr           goto state 43
	lval           goto state 12
	pred           goto state 44

State 18

	expr -> for . id '=' expr to expr do expr           (rule 10)

	id             shift, and enter state 42


State 19

	expr -> match . expr with '{' cases '}'             (rule 14)

	int            shift, and enter state 13
	id             shift, and enter state 14
	idc            shift, and enter state 15
	void           shift, and enter state 16
	if             shift, and enter state 17
	for            shift, and enter state 18
	match          shift, and enter state 19
	trans          shift, and enter state 20
	shrink         shift, and enter state 21
	ext            shift, and enter state 22
	sext           shift, and enter state 23
	'('            shift, and enter state 24
	'{'            shift, and enter state 25

	expr           goto state 41
	lval           goto state 12

State 20

	expr -> trans . '[' int ',' int ']' '(' expr ')'    (rule 15)

	'['            shift, and enter state 40


State 21

	expr -> shrink . '[' int ']' '(' expr ')'           (rule 18)

	'['            shift, and enter state 39


State 22

	expr -> ext . '[' int ']' '(' expr ')'              (rule 16)

	'['            shift, and enter state 38


State 23

	expr -> sext . '[' int ']' '(' expr ')'             (rule 17)

	'['            shift, and enter state 37


State 24

	expr -> '(' . expr ')'                              (rule 25)

	int            shift, and enter state 13
	id             shift, and enter state 14
	idc            shift, and enter state 15
	void           shift, and enter state 16
	if             shift, and enter state 17
	for            shift, and enter state 18
	match          shift, and enter state 19
	trans          shift, and enter state 20
	shrink         shift, and enter state 21
	ext            shift, and enter state 22
	sext           shift, and enter state 23
	'('            shift, and enter state 24
	'{'            shift, and enter state 25

	expr           goto state 36
	lval           goto state 12

State 25

	expr -> '{' . vars exprs '}'                        (rule 8)

	int            reduce using rule 31
	id             reduce using rule 31
	idc            reduce using rule 31
	var            shift, and enter state 35
	void           reduce using rule 31
	if             reduce using rule 31
	for            reduce using rule 31
	match          reduce using rule 31
	trans          reduce using rule 31
	shrink         reduce using rule 31
	ext            reduce using rule 31
	sext           reduce using rule 31
	'('            reduce using rule 31
	'{'            reduce using rule 31
	'}'            reduce using rule 31

	vars           goto state 33
	var_decl       goto state 34

State 26

	mode_decl -> mode id '{' state_decl main_decl '}' .    (rule 1)

	%eof           reduce using rule 1


State 27

	state_decl -> state '{' state_vars . '}'            (rule 2)

	'}'            shift, and enter state 32


State 28

	state_vars -> state_var . state_vars                (rule 4)

	id             shift, and enter state 29
	'}'            reduce using rule 3

	state_vars     goto state 31
	state_var      goto state 28

State 29

	state_var -> id . ':' type_reg '=' expr             (rule 5)

	':'            shift, and enter state 30


State 30

	state_var -> id ':' . type_reg '=' expr             (rule 5)

	bits           shift, and enter state 95
	range          shift, and enter state 96
	data           shift, and enter state 97
	void           shift, and enter state 98

	type_reg       goto state 94

State 31

	state_vars -> state_var state_vars .                (rule 4)

	'}'            reduce using rule 4


State 32

	state_decl -> state '{' state_vars '}' .            (rule 2)

	main           reduce using rule 2


State 33

	expr -> '{' vars . exprs '}'                        (rule 8)

	int            shift, and enter state 13
	id             shift, and enter state 14
	idc            shift, and enter state 15
	void           shift, and enter state 16
	if             shift, and enter state 17
	for            shift, and enter state 18
	match          shift, and enter state 19
	trans          shift, and enter state 20
	shrink         shift, and enter state 21
	ext            shift, and enter state 22
	sext           shift, and enter state 23
	'('            shift, and enter state 24
	'{'            shift, and enter state 25
	'}'            reduce using rule 29

	expr           goto state 92
	lval           goto state 12
	exprs          goto state 93

State 34

	vars -> var_decl . vars                             (rule 32)

	int            reduce using rule 31
	id             reduce using rule 31
	idc            reduce using rule 31
	var            shift, and enter state 35
	void           reduce using rule 31
	if             reduce using rule 31
	for            reduce using rule 31
	match          reduce using rule 31
	trans          reduce using rule 31
	shrink         reduce using rule 31
	ext            reduce using rule 31
	sext           reduce using rule 31
	'('            reduce using rule 31
	'{'            reduce using rule 31
	'}'            reduce using rule 31

	vars           goto state 91
	var_decl       goto state 34

State 35

	var_decl -> var . id ':' type_reg '=' expr          (rule 33)

	id             shift, and enter state 90


State 36

	expr -> expr . '+' expr                             (rule 19)
	expr -> expr . '-' expr                             (rule 20)
	expr -> expr . '&' expr                             (rule 21)
	expr -> expr . '^' expr                             (rule 22)
	expr -> expr . '|' expr                             (rule 23)
	expr -> '(' expr . ')'                              (rule 25)

	'+'            shift, and enter state 53
	'-'            shift, and enter state 54
	'&'            shift, and enter state 55
	'|'            shift, and enter state 56
	'^'            shift, and enter state 57
	')'            shift, and enter state 89


State 37

	expr -> sext '[' . int ']' '(' expr ')'             (rule 17)

	int            shift, and enter state 88


State 38

	expr -> ext '[' . int ']' '(' expr ')'              (rule 16)

	int            shift, and enter state 87


State 39

	expr -> shrink '[' . int ']' '(' expr ')'           (rule 18)

	int            shift, and enter state 86


State 40

	expr -> trans '[' . int ',' int ']' '(' expr ')'    (rule 15)

	int            shift, and enter state 85


State 41

	expr -> match expr . with '{' cases '}'             (rule 14)
	expr -> expr . '+' expr                             (rule 19)
	expr -> expr . '-' expr                             (rule 20)
	expr -> expr . '&' expr                             (rule 21)
	expr -> expr . '^' expr                             (rule 22)
	expr -> expr . '|' expr                             (rule 23)

	with           shift, and enter state 84
	'+'            shift, and enter state 53
	'-'            shift, and enter state 54
	'&'            shift, and enter state 55
	'|'            shift, and enter state 56
	'^'            shift, and enter state 57


State 42

	expr -> for id . '=' expr to expr do expr           (rule 10)

	'='            shift, and enter state 83


State 43

	expr -> expr . '+' expr                             (rule 19)
	expr -> expr . '-' expr                             (rule 20)
	expr -> expr . '&' expr                             (rule 21)
	expr -> expr . '^' expr                             (rule 22)
	expr -> expr . '|' expr                             (rule 23)
	pred -> expr . comp expr                            (rule 51)

	'+'            shift, and enter state 53
	'-'            shift, and enter state 54
	'&'            shift, and enter state 55
	'|'            shift, and enter state 56
	'^'            shift, and enter state 57
	'='            shift, and enter state 73
	'/='           shift, and enter state 74
	'<'            shift, and enter state 75
	'>'            shift, and enter state 76
	'<='           shift, and enter state 77
	'>='           shift, and enter state 78
	'<$'           shift, and enter state 79
	'<=$'          shift, and enter state 80
	'>$'           shift, and enter state 81
	'>=$'          shift, and enter state 82

	comp           goto state 72

State 44

	expr -> if pred . then expr else expr               (rule 9)
	pred -> pred . and pred                             (rule 49)
	pred -> pred . or pred                              (rule 50)

	then           shift, and enter state 69
	and            shift, and enter state 70
	or             shift, and enter state 71


State 45

	pred -> true .                                      (rule 46)

	then           reduce using rule 46
	and            reduce using rule 46
	or             reduce using rule 46


State 46

	pred -> false .                                     (rule 47)

	then           reduce using rule 47
	and            reduce using rule 47
	or             reduce using rule 47


State 47

	pred -> not . pred                                  (rule 48)

	int            shift, and enter state 13
	id             shift, and enter state 14
	idc            shift, and enter state 15
	void           shift, and enter state 16
	if             shift, and enter state 17
	for            shift, and enter state 18
	match          shift, and enter state 19
	true           shift, and enter state 45
	false          shift, and enter state 46
	not            shift, and enter state 47
	trans          shift, and enter state 20
	shrink         shift, and enter state 21
	ext            shift, and enter state 22
	sext           shift, and enter state 23
	'('            shift, and enter state 24
	'{'            shift, and enter state 25

	expr           goto state 43
	lval           goto state 12
	pred           goto state 68

State 48

	expr -> expr . '+' expr                             (rule 19)
	expr -> expr . '-' expr                             (rule 20)
	expr -> expr . '&' expr                             (rule 21)
	expr -> expr . '^' expr                             (rule 22)
	expr -> expr . '|' expr                             (rule 23)
	args -> expr .                                      (rule 35)
	args -> expr . ',' args                             (rule 36)

	'+'            shift, and enter state 53
	'-'            shift, and enter state 54
	'&'            shift, and enter state 55
	'|'            shift, and enter state 56
	'^'            shift, and enter state 57
	')'            reduce using rule 35
	','            shift, and enter state 67


State 49

	expr -> idc args . ')'                              (rule 12)

	')'            shift, and enter state 66


State 50

	lval -> id '[' . expr ']'                           (rule 28)

	int            shift, and enter state 13
	id             shift, and enter state 14
	idc            shift, and enter state 15
	void           shift, and enter state 16
	if             shift, and enter state 17
	for            shift, and enter state 18
	match          shift, and enter state 19
	trans          shift, and enter state 20
	shrink         shift, and enter state 21
	ext            shift, and enter state 22
	sext           shift, and enter state 23
	'('            shift, and enter state 24
	'{'            shift, and enter state 25

	expr           goto state 65
	lval           goto state 12

State 51

	expr -> id '.' . idc args ')'                       (rule 13)

	idc            shift, and enter state 64


State 52

	expr -> lval '<-' . expr                            (rule 11)

	int            shift, and enter state 13
	id             shift, and enter state 14
	idc            shift, and enter state 15
	void           shift, and enter state 16
	if             shift, and enter state 17
	for            shift, and enter state 18
	match          shift, and enter state 19
	trans          shift, and enter state 20
	shrink         shift, and enter state 21
	ext            shift, and enter state 22
	sext           shift, and enter state 23
	'('            shift, and enter state 24
	'{'            shift, and enter state 25

	expr           goto state 63
	lval           goto state 12

State 53

	expr -> expr '+' . expr                             (rule 19)

	int            shift, and enter state 13
	id             shift, and enter state 14
	idc            shift, and enter state 15
	void           shift, and enter state 16
	if             shift, and enter state 17
	for            shift, and enter state 18
	match          shift, and enter state 19
	trans          shift, and enter state 20
	shrink         shift, and enter state 21
	ext            shift, and enter state 22
	sext           shift, and enter state 23
	'('            shift, and enter state 24
	'{'            shift, and enter state 25

	expr           goto state 62
	lval           goto state 12

State 54

	expr -> expr '-' . expr                             (rule 20)

	int            shift, and enter state 13
	id             shift, and enter state 14
	idc            shift, and enter state 15
	void           shift, and enter state 16
	if             shift, and enter state 17
	for            shift, and enter state 18
	match          shift, and enter state 19
	trans          shift, and enter state 20
	shrink         shift, and enter state 21
	ext            shift, and enter state 22
	sext           shift, and enter state 23
	'('            shift, and enter state 24
	'{'            shift, and enter state 25

	expr           goto state 61
	lval           goto state 12

State 55

	expr -> expr '&' . expr                             (rule 21)

	int            shift, and enter state 13
	id             shift, and enter state 14
	idc            shift, and enter state 15
	void           shift, and enter state 16
	if             shift, and enter state 17
	for            shift, and enter state 18
	match          shift, and enter state 19
	trans          shift, and enter state 20
	shrink         shift, and enter state 21
	ext            shift, and enter state 22
	sext           shift, and enter state 23
	'('            shift, and enter state 24
	'{'            shift, and enter state 25

	expr           goto state 60
	lval           goto state 12

State 56

	expr -> expr '|' . expr                             (rule 23)

	int            shift, and enter state 13
	id             shift, and enter state 14
	idc            shift, and enter state 15
	void           shift, and enter state 16
	if             shift, and enter state 17
	for            shift, and enter state 18
	match          shift, and enter state 19
	trans          shift, and enter state 20
	shrink         shift, and enter state 21
	ext            shift, and enter state 22
	sext           shift, and enter state 23
	'('            shift, and enter state 24
	'{'            shift, and enter state 25

	expr           goto state 59
	lval           goto state 12

State 57

	expr -> expr '^' . expr                             (rule 22)

	int            shift, and enter state 13
	id             shift, and enter state 14
	idc            shift, and enter state 15
	void           shift, and enter state 16
	if             shift, and enter state 17
	for            shift, and enter state 18
	match          shift, and enter state 19
	trans          shift, and enter state 20
	shrink         shift, and enter state 21
	ext            shift, and enter state 22
	sext           shift, and enter state 23
	'('            shift, and enter state 24
	'{'            shift, and enter state 25

	expr           goto state 58
	lval           goto state 12

State 58

	expr -> expr . '+' expr                             (rule 19)
	expr -> expr . '-' expr                             (rule 20)
	expr -> expr . '&' expr                             (rule 21)
	expr -> expr . '^' expr                             (rule 22)
	expr -> expr '^' expr .                             (rule 22)
	expr -> expr . '|' expr                             (rule 23)

	int            reduce using rule 22
	id             reduce using rule 22
	idc            reduce using rule 22
	var            reduce using rule 22
	void           reduce using rule 22
	if             reduce using rule 22
	then           reduce using rule 22
	else           reduce using rule 22
	for            reduce using rule 22
	to             reduce using rule 22
	do             reduce using rule 22
	match          reduce using rule 22
	with           reduce using rule 22
	and            reduce using rule 22
	or             reduce using rule 22
	trans          reduce using rule 22
	shrink         reduce using rule 22
	ext            reduce using rule 22
	sext           reduce using rule 22
	'+'            reduce using rule 22
	'-'            reduce using rule 22
	'&'            reduce using rule 22
	'|'            shift, and enter state 56
	'^'            reduce using rule 22
	'='            reduce using rule 22
	'/='           reduce using rule 22
	'('            reduce using rule 22
	')'            reduce using rule 22
	'{'            reduce using rule 22
	'}'            reduce using rule 22
	']'            reduce using rule 22
	','            reduce using rule 22
	'_'            reduce using rule 22
	'<'            reduce using rule 22
	'>'            reduce using rule 22
	'<='           reduce using rule 22
	'>='           reduce using rule 22
	'<$'           reduce using rule 22
	'<=$'          reduce using rule 22
	'>$'           reduce using rule 22
	'>=$'          reduce using rule 22


State 59
